* added uplay icon

--- a/automatic/uplay/uplay.nuspec
+++ b/automatic/uplay/uplay.nuspec
@@ -22,6 +22,7 @@
     <licenseUrl><![CDATA[https://uplayconnect.ubi.com/Default/Tou?appId=314d4fef-e568-454a-ae06-43e3bece12a6&genomeId=109bec19-c487-4ec4-b9de-da901a396803&lang=en-GB&nextUrl=https%3A%2F%2Fuplay.ubi.com%2F%23!%2Fen-GB%2Frefresh-location&Type=tou&
 	    countryCode=GB]]></licenseUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
+	  <iconUrl>https://cdn.rawgit.com/criography/chocolatey-packages/v1.6/automatic/uplay/icon.png</iconUrl>
     <releaseNotes>http://forums.ubi.com/showthread.php/1141896-Uplay-PC-Client-May-Release</releaseNotes>
   </metadata>
   <files>
