--- a/automatic/xyplorer/xyplorer.nuspec
+++ b/automatic/xyplorer/xyplorer.nuspec
@@ -8,9 +8,11 @@
     <authors>Donald Lessau</authors>
     <owners>Marek Lenik</owners>
     <summary>XYplorer is a file manager for Windows.</summary>
-    <description>It features tabbed browsing, a powerful file search, a versatile preview, a highly customizable interface, optional dual pane, and a large array of unique ways to efficiently automate frequently recurring tasks. It's fast and light, it's innovative, and it's portable.
+    <description>XYplorer is a file manager for Windows. It features tabbed browsing, a powerful file search, a versatile preview, a highly customizable interface, optional dual pane, and a large array of unique ways to efficiently automate frequently recurring tasks. It's fast and light, it's innovative, and it's portable.
 
     This is a commercial product, with a 30 day trial. For pricing go to: http://www.xyplorer.com/#buy
+
+    Please note: there's a modal box present during uninstallation.
     </description>
     <projectUrl>http://www.xyplorer.com</projectUrl>
     <tags>file-manager file-management dual-panel explorer</tags>
