--- a/automatic/garmin-express/garmin-express.nuspec
+++ b/automatic/garmin-express/garmin-express.nuspec
@@ -2,7 +2,7 @@
 <!-- Do not remove this test for UTF-8: if “Ω” doesn’t appear as greek uppercase omega letter enclosed in quotation marks, you should use an editor that supports UTF-8, not this one. -->
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>garmin-express</id>
+    <id>{{PackageName}}</id>
     <title>Garmin Express</title>
     <version>{{PackageVersion}}</version>
     <authors>Garmin Ltd.</authors>
@@ -16,7 +16,7 @@
     <tags>garmin geolocation gps drivers mapping</tags>
     <copyright>Copyright © 1996-2015 Garmin Ltd.</copyright>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <iconUrl>https://cdn.rawgit.com/criography/chocolatey-packages/v1.4/automatic/garmin-express/icon.png</iconUrl>
+    <iconUrl>https://cdn.rawgit.com/criography/chocolatey-packages/v1.4/automatic/{{PackageName}}/icon.png</iconUrl>
     <releaseNotes>http://www.softpedia.com/progChangelog/Garmin-Express-Changelog-239741.html</releaseNotes>
   </metadata>
   <files>
