--- a/.gitmodules
+++ b/.gitmodules
@@ -28,9 +28,9 @@
 [submodule "automatic/casperjs/tools/helpers"]
 	path = automatic/casperjs/tools/helpers
 	url = git@github.com:criography/chocolatey-helpers.git
-[submodule "manual/exiftoolgui/tools/helpers"]
-	path = manual/exiftoolgui/tools/helpers
-	url = git@github.com:criography/chocolatey-helpers.git
 [submodule "automatic/svgo-gui/tools/helpers"]
 	path = automatic/svgo-gui/tools/helpers
+	url = git@github.com:criography/chocolatey-helpers.git
+[submodule "automatic/exiftoolgui.internal/tools/helpers"]
+	path = automatic/exiftoolgui.internal/tools/helpers
 	url = git@github.com:criography/chocolatey-helpers.git
