--- a/automatic/bitmeter2/bitmeter2.nuspec
+++ b/automatic/bitmeter2/bitmeter2.nuspec
@@ -2,7 +2,7 @@
 <!-- Do not remove this test for UTF-8: if “Ω” doesn’t appear as greek uppercase omega letter enclosed in quotation marks, you should use an editor that supports UTF-8, not this one. -->
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>bitmeter2</id>
+    <id>{{PackageName}}</id>
     <title>Bitmeter II</title>
     <version>{{PackageVersion}}</version>
     <authors>Rob Dawson</authors>
@@ -14,7 +14,7 @@
     <tags>monitor-bandwidth monitor-connection bandwidth-monitor bandwidth monitor connection graph system-tray</tags>
     <copyright>© 2004-2015 Rob Dawson</copyright>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <iconUrl>https://cdn.rawgit.com/criography/chocolatey-packages/v1.8/automatic/bitmeter2/icon.png</iconUrl>
+    <iconUrl>https://cdn.rawgit.com/criography/chocolatey-packages/v1.8/automatic/{{PackageName}}/icon.png</iconUrl>
     <releaseNotes>http://codebox.org.uk/pages/bitmeter2/changelog</releaseNotes>
   </metadata>
   <files>
