--- a/automatic/garmin-basecamp/garmin-basecamp.nuspec
+++ b/automatic/garmin-basecamp/garmin-basecamp.nuspec
@@ -2,7 +2,7 @@
 <!-- Do not remove this test for UTF-8: if “Ω” doesn’t appear as greek uppercase omega letter enclosed in quotation marks, you should use an editor that supports UTF-8, not this one. -->
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
-		<id>garmin-basecamp</id>
+		<id>{{PackageName}}</id>
 		<title>Garmin Basecamp</title>
 		<version>{{PackageVersion}}</version>
 		<authors>Garmin Ltd.</authors>
@@ -24,7 +24,7 @@
 		<copyright>Copyright © 1996-2015 Garmin Ltd.</copyright>
 		<licenseUrl>https://basecamp.com/terms</licenseUrl>
 		<requireLicenseAcceptance>true</requireLicenseAcceptance>
-		<iconUrl>https://cdn.rawgit.com/criography/chocolatey-packages/v1.5/automatic/garmin-basecamp/icon.png</iconUrl>
+		<iconUrl>https://cdn.rawgit.com/criography/chocolatey-packages/v1.5/automatic/{{PackageName}}/icon.png</iconUrl>
 		<dependencies>
 			<dependency id="dotnet4.5" />
 		</dependencies>
