--- a/automatic/hdsentinel/hdsentinel.nuspec
+++ b/automatic/hdsentinel/hdsentinel.nuspec
@@ -2,7 +2,7 @@
 <!-- Do not remove this test for UTF-8: if “Ω” doesn’t appear as greek uppercase omega letter enclosed in quotation marks, you should use an editor that supports UTF-8, not this one. -->
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>hdsentinel</id>
+    <id>{{PackageName}}</id>
     <title>Hard Disk Sentinel</title>
     <version>{{PackageVersion}}</version>
     <authors>H.D.S. Hungary.</authors>
@@ -33,7 +33,7 @@
     <copyright>© 2015 H.D.S. Hungary. All Rights Reserved.</copyright>
     <licenseUrl>http://www.hdsentinel.com/eula.php</licenseUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <iconUrl>https://cdn.rawgit.com/criography/chocolatey-packages/v1.7/automatic/hdsentinel/icon.jpg</iconUrl>
+    <iconUrl>https://cdn.rawgit.com/criography/chocolatey-packages/v1.7/automatic/{{PackageName}}/icon.jpg</iconUrl>
     <releaseNotes>http://www.hdsentinel.com/revision.php</releaseNotes>
   </metadata>
   <files>
