--- a/.choco/templates/packageName.nuspec
+++ b/.choco/templates/packageName.nuspec
@@ -14,7 +14,7 @@
         <copyright>{{copyright}}</copyright>
         <licenseUrl>{{licence}}</licenseUrl>
         <requireLicenseAcceptance>{{licenceRequired}}</requireLicenseAcceptance>
-        <iconUrl>https://cdn.rawgit.com/criography/chocolatey-packages/v1.0/automatic/{{slug}}/icon.png</iconUrl>
+        <iconUrl>https://cdn.rawgit.com/criography/chocolatey-packages/master/src/{{slug}}/icon.png</iconUrl>
         <releaseNotes>{{releaseNotes}}</releaseNotes>
         <dependencies>{{dependencies}}</dependencies>
         <packageSourceUrl>https://github.com/criography/chocolatey-packages/tree/master/dist/{{slug}}</packageSourceUrl>
