--- a/src/figma/figma.nuspec
+++ b/src/figma/figma.nuspec
@@ -14,7 +14,8 @@
         <copyright>{{copyright}}</copyright>
         <licenseUrl>{{licence}}</licenseUrl>
         <requireLicenseAcceptance>{{licenceRequired}}</requireLicenseAcceptance>
-        <iconUrl>https://cdn.rawgit.com/criography/chocolatey-packages/master/src/{{slug}}/icon.png</iconUrl>
+        <iconUrl></iconUrl>https://cdn.rawgit.com/criography/chocolatey-packages/ba4ee9a1/src/{{slug}}/icon
+        .jpg</iconUrl>
         <releaseNotes>{{releaseNotes}}</releaseNotes>
         <dependencies>{{dependencies}}</dependencies>
         <packageSourceUrl>https://github.com/criography/chocolatey-packages/tree/master/dist/{{slug}}</packageSourceUrl>
