--- a/src/xyplorer/config.json
+++ b/src/xyplorer/config.json
@@ -4,7 +4,7 @@
     "authors"         : "Donald Lessau",
     "url"             : "http://www.xyplorer.com",
     "tags"            : "file-manager file-management dual-panel explorer",
-    "copyright"       : "Copyright © 1997-2015 by Donald Lessau",
+    "copyright"       : "Copyright © 1997 by Donald Lessau",
     "licence"         : "http://www.xyplorer.com/LicenseXY.txt",
     "licenceRequired" : true,
     "releaseNotes"    : "http://www.xyplorer.com/whatsnew.php#current",
