--- a/packages/color-quantizer/color-quantizer.nuspec
+++ b/packages/color-quantizer/color-quantizer.nuspec
@@ -13,7 +13,7 @@
         <tags>{{tags}}</tags>
         <copyright>{{copyright}}</copyright>
         <requireLicenseAcceptance>{{licenceRequired}}</requireLicenseAcceptance>
-        <iconUrl>https://cdn.rawgit.com/criography/chocolatey-packages/ba4ee9a1/src/{{slug}}/icon.jpg</iconUrl>
+        <iconUrl>https://cdn.jsdelivr.net/gh/criography/chocolatey-packages@2.1.0/packages/{{slug}}/icon.png</iconUrl>
         <releaseNotes>{{releaseNotes}}</releaseNotes>
         <dependencies>{{dependencies}}</dependencies>
         <packageSourceUrl>https://github.com/criography/chocolatey-packages/tree/master/dist/{{slug}}</packageSourceUrl>
