--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "chalk": "^2.4.2",
     "handlebars": "^4.0.12",
     "hasha": "^3.0.0",
-    "mkdirp-promise": "^5.0.1",
-    "node-fetch": "^2.3.0",
+    "mkdirp-promise": "5.0.1",
+    "node-fetch": "2.3.0",
     "node-progress-bars": "^1.0.8",
     "recursive-copy": "^2.0.9",
     "request": "^2.88.0",
