--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "ascii-progress": "^1.0.5",
     "chalk": "^2.4.2",
-    "handlebars": "^4.1.2",
+    "handlebars": "4.7.3",
     "hasha": "^5.0.0",
     "mkdirp-promise": "5.0.1",
     "node-fetch": "2.6.0",
