--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ascii-progress": "^1.0.5",
     "chalk": "^2.4.2",
     "handlebars": "4.7.3",
     "hasha": "^5.0.0",
-    "mkdirp-promise": "5.0.1",
+    "mkdirp": "1.0.4",
     "node-fetch": "2.6.0",
-    "node-progress-bars": "^1.0.8",
     "recursive-copy": "^2.0.10",
     "request": "^2.88.0",
     "request-progress": "^3.0.0",
