--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test",
-  "version": "2.1.16",
+  "version": "2.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,17 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^2.4.2",
+    "chalk": "4.1.2",
     "handlebars": "4.7.3",
     "hasha": "^5.0.0",
     "mkdirp": "1.0.4",
     "node-fetch": "2.6.0",
-    "recursive-copy": "^2.0.10",
-    "request": "^2.88.0",
-    "request-progress": "^3.0.0",
-    "rmfr": "^2.0.0",
-    "template-file": "^3.1.0",
-    "through": "^2.3.8",
-    "time-stamp": "^2.2.0"
+    "recursive-copy": "2.0.13",
+    "request": "2.88.2",
+    "request-progress": "3.0.0",
+    "rmfr": "2.0.0",
+    "template-file": "3.1.0",
+    "through": "2.3.8",
+    "time-stamp": "2.2.0"
   }
 }
